--- a/client/trfamilytodo-frontend/src/scss/style.scss
+++ b/client/trfamilytodo-frontend/src/scss/style.scss
@@ -1,15 +1,121 @@
 @import "./util";
+@import './mediaQ';
 
 body{
+    font-family: $primary-font-family,$secondary-background-color;
+    box-sizing: border-box;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background: $primary-background-color;
 }
 
-.Form{
+@media (max-width: $mobile-device){
+    .form{
+        display: block;
+        margin-top: 50%;
+        margin-left: 12.5%;
+        justify-content: center;
+        align-items: center;
+        color: $alt-color;
+    };
+    .form-value{
+        background: transparent;
+        width: 95%;
+        height: 30px;
+        border-radius: 24px;
+        padding: 6px;
+        background: $primary-color
+    }
+    .form-btn{
+        background: $primary-btn-color;
+        width: 50%;
+        border-radius: 20px;
+        padding: 12px;
+        margin-top: 10%;
+        margin-left: 50%;
+    }
+    .form-span{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40%;
+        margin-right: 25%;
+        font-size: map-get($font-size , 'big' );
+    }
+};
+
+/*To display or not display login or register form*/
+[data-show=true] {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    margin: auto;
-    background-color: $primary-color;
+  }
+  
+  [data-show=false] {
+    display: none;
+  }
+  
+  [data-dont-show=true] {
+    display: none;
+  }
+  
+  [data-dont-show=false] {
+    display: flex;
+  }
+
+/* Toggle btn */
+
+.switch{
+    position: relative;
+    display: block;
+    width: 90px;
+    height: 45px;
+    padding: 2%;
+    margin-bottom: 2%;
 }
+
+.slider{
+    position: absolute;
+    cursor: pointer;
+    top: 0; left: 0; right: 0; bottom: 0; 
+    background: $primary-color;
+    transition: .5s;
+    border: 3px solid $primary-color;
+    box-shadow: 1px 1px 1px whitesmoke;
+}
+
+.slider:before {
+    position: absolute;
+    content: '';
+    bottom: 14px;
+    top: 8px;
+    background: $primary-btn-color;
+    transition: .5s;
+}
+
+.switch input {display: none; }
+
+input:checked + .slider {
+    background: $primary-btn-color;
+}
+
+input:checked + .slider:before {
+    transform: translateX(47px) rotateZ(45deg);
+    background: $primary-color;
+}
+
+.slider.round{
+    border-radius: 35px;
+}
+
+.slider.round:before{
+    width: 43%;
+    height: 43%;
+    border-top-right-radius: 70px;
+    border-top-left-radius: 70px;
+    transform: rotateZ(-45deg);
+}
+
+
+
 
