Updates to restful api and adding some css

--- a/client/trfamilytodo-frontend/src/scss/_util.scss
+++ b/client/trfamilytodo-frontend/src/scss/_util.scss
@@ -1,4 +1,7 @@
 $primary-color: lightgrey;
 $alt-color: white;
+$primary-btn-color:linear-gradient(0.25turn, #7116BE, #A716CF,#D516DB,);
 $primary-background-color: Black;
 $secondary-background-color: grey;
+$primary-font-family: 'Bebas Neue';
+$font-size: ("regular": 10px, "medium": 20px, "bold": 30px);
